--- a/package.json
+++ b/package.json
@@ -16,5 +16,20 @@
     "handling"
   ],
   "author": "Ayhan Kuru <github.com/ayhankuru>",
-  "license": "MIT"
+  "license": "MIT",
+  "dependencies": {
+    "@cobaimelan/prettify-error": "^0.1.3",
+    "babel-core": "^6.3.13",
+    "babel-plugin-add-module-exports": "^0.1.1",
+    "babel-plugin-lodash": "^1.0.2",
+    "babel-preset-es2015": "^6.3.13",
+    "debug": "^2.2.0",
+    "english-time": "0.0.9",
+    "failing-line": "^0.1.0",
+    "format-text": "0.0.3",
+    "moment": "^2.10.6",
+    "nodemailer": "^1.10.0",
+    "object-assign": "^4.0.1",
+    "simple-jobs": "0.0.1"
+  }
 }
