--- a/package.json
+++ b/package.json
@@ -24,6 +24,7 @@
     "babel-plugin-lodash": "^1.0.2",
     "babel-preset-es2015": "^6.3.13",
     "debug": "^2.2.0",
+    "ejs": "^2.3.4",
     "english-time": "0.0.9",
     "failing-line": "^0.1.0",
     "format-text": "0.0.3",
