--- a/package.json
+++ b/package.json
@@ -31,6 +31,8 @@
     "moment": "^2.10.6",
     "nodemailer": "^1.10.0",
     "object-assign": "^4.0.1",
-    "simple-jobs": "0.0.1"
+    "pushbullet": "^1.4.3",
+    "simple-jobs": "0.0.1",
+    "slackbots": "^0.5.0"
   }
 }
