--- a/package.json
+++ b/package.json
@@ -19,6 +19,7 @@
   "license": "MIT",
   "dependencies": {
     "@cobaimelan/prettify-error": "^0.1.3",
+    "after-time": "0.0.1",
     "babel-core": "^6.3.13",
     "babel-plugin-add-module-exports": "^0.1.1",
     "babel-plugin-lodash": "^1.0.2",
@@ -28,11 +29,12 @@
     "english-time": "0.0.9",
     "failing-line": "^0.1.0",
     "format-text": "0.0.3",
-    "moment": "^2.10.6",
+    "leveldown": "^1.4.3",
+    "levelup": "^1.3.1",
     "nodemailer": "^1.10.0",
     "object-assign": "^4.0.1",
     "pushbullet": "^1.4.3",
-    "simple-jobs": "0.0.1",
-    "slackbots": "^0.5.0"
+    "slackbots": "^0.5.0",
+    "then-levelup": "then/then-levelup#master"
   }
 }
